2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Bump version to 0.3.0.

2009-08-10  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/messages.properties: Added keys.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java: Suppression file
	attribute now contains a list.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java: Changed suppression
	file control to a List and corresponding attributes.

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	Bug #285861

	* plugin.properties: Change Provider to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/launch: Moved all but IValgrindLaunchDelegate,
	IValgrindOutputDirectoryProvider, IValgrindToolPage.
	* src/org/eclipse/linuxtools/internal/valgrind/launch: New package.
	* .project: Added API analysis.
	* META-INF/MANIFEST.MF: Export internal package.
	* plugin.xml: Update class references.

2009-07-09  Elliott Baron  <ebaron@redhat.com>

	* ValgrindLaunchPlugin.java (parseWSPath): Don't report undef variables as errors.
	* ValgrindOptionsTab.java: Display version exceptions only in tab's errorMessage.

2009-06-25  Elliott Baron  <ebaron@redhat.com>

	* ValgrindLaunchConfigurationDelegate.java: Removed unused code.

2009-06-23  Elliott Baron  <ebaron@redhat.com>

	* ValgrindExportWizardPage.java (getSelectAllButton): Created getter.
	(getViewer): Likewise.
	(getDeselectAllButton): Likewise. 
	(getDestText): Likewise.
	* src/org/eclipse/linuxtools/valgrind/launch/ValgrindLaunchPlugin.java (getValgrindCommand): 
	(setValgrindCommand): 
	* src/org/eclipse/linuxtools/valgrind/launch/ValgrindOptionsTab.java (getMainStackSizeButton): Created getter.
	(getMaxStackFrameSpinner): Likewise.
	(getNumCallersSpinner): Likewise.
	(loadDynamicTab): Renamed from getDynamicTab.
	(getShowBelowMainButton): Created getter.