@@ -16,10 +16,12 @@ Import-Package: org.eclipse.cdt.core,
  org.eclipse.cdt.launch,
  org.eclipse.cdt.utils,
  org.eclipse.core.expressions,
+ org.eclipse.core.filesystem,
  org.eclipse.core.resources,
  org.eclipse.core.variables,
  org.eclipse.debug.core,
  org.eclipse.debug.core.model,
+ org.eclipse.debug.core.sourcelookup.containers,
  org.eclipse.debug.ui,
  org.eclipse.debug.ui.console,
  org.eclipse.debug.ui.sourcelookup,
